--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,21 @@ body {
 
 .main {
     text-align: center;
+    font-family: sans-serif;
+    font-size: 50px;
+    margin-top: 100px;
 }
 
 .input {
+    height: 65px;
+    width: 700px;
+    margin: 20px;
+    font-size: 60px;
+    text-align: center;
+}
+
+.container {
     display: flex;
-    justify-content: center;
-    padding: 10px;
+    flex-direction: column;
+    align-items: center;
 }
