--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -8,7 +8,7 @@ body {
     height: 50px;
     color: white;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: flex-end;
 }
 
