--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -13,11 +13,14 @@ body {
 }
 
 .headerItem {
+    font-size: small;
     padding: 10px;
+    font-weight: bold;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('../actualResized.jpeg');
 }
