--- a/src/Components/Person.css
+++ b/src/Components/Person.css
@@ -19,15 +19,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('../actualResized.jpeg');
 }
 
 .mainBox {
-    background-image: url("../china-wall.jpg");
     width: 95vw;
     height: 50vh;
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
     border-radius: 30px;
     border-style: solid;
     border: 1px black;
