--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -9,7 +9,7 @@ body {
 
 .header {
     background-color: black;
-    height: 50px;
+    height: 70px;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -26,5 +26,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('../My project.jpg');
+    background-image: url('../photos/My project.jpg');
+}
+
+.bubble {
+    padding: 20px;
+    font-size: large;
+    font-weight: 800;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 50px;
 }
