--- a/src/Components/MyTrips.css
+++ b/src/Components/MyTrips.css
@@ -3,6 +3,13 @@
     src: url(../Anton-Regular.ttf)
 }
 
+.x {
+    margin-left: 700px;
+    margin-top: 5px;
+    font-weight: 800;
+    font-size: larger;
+}
+
 .tripContainer {
     display: flex;
     height: 100%;
@@ -17,14 +24,38 @@
 
 .createTripContainer {
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    height: 53vh;
+    width: 75vw;
     align-items: center;
+    flex-direction: row;
+    background-color: white;
+    border-radius: 25px;
+    margin: 20px;
+}
+
+.halfTripContainer {
+    width: 300px;
+    background-color: rgb(59, 55, 255);
+    height: 90%;
+    border-radius: 25px;
+    margin: 8px;
+    display: flex;
     flex-direction: column;
-    background-image: url('../photos/My project.jpg');
-    background-repeat: none;
-    background-size: cover;
-    padding-top: 100px;
+}
+
+.blueBoxWords {
+    color: white;
+    font-weight: 700;
+    padding: 30px 30px 0 30px;
+    font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.smallBlueBoxWords {
+    color: white;
+    padding: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 
 .backWrapper {
@@ -39,13 +70,19 @@
 
 .wholeScreen {
     display: flex;
+    flex-direction: column;
     height: 100vh;
+    width: 100vw;
     background-image: url('../photos/My project.jpg');
+}
+
+.createButton {
+    width: 50px;
+    margin-left: 45%;
 }
 
 .title {
     font-size: 50px;
-    text-decoration: underline;
     margin: 30px;
     font-family: Anton;
     font-weight: 250;
@@ -56,8 +93,13 @@
     display: flex;
     flex-direction: row;
     margin-right: 50px;
-    width: 400px;
+    width: 250px;
     justify-content: space-between;
+}
+
+.datePicker {
+    background-color: white;
+    height: 50px;
 }
 
 .home {
@@ -67,12 +109,44 @@
     margin-left: 20px;
 }
 
-input {
-    padding: 12px;
-    margin: 20px;
-    border-radius: 10px;
-    width: 600px;
-    height: 30px;
+.createTripInputContainer {
+    width: 700px;
+    background-color: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35%;
+}
+
+.myTripsWholeScreen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../photos/My project.jpg');
+}
+
+.tripInfo {
+    border: 1px solid black;
+    height: 50px;
+    margin: 20px 0 10px 0;
+    height: 100px;
+}
+
+.otherHalfContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    background-color: none;
+}
+
+.createTripInput {
+    width: 325px;
+    height: 45px;
+    border-radius: 7px;
+    margin: 5px;
+    border: 1px solid black;
 }
 
 button {
@@ -102,10 +176,11 @@ button {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: #bec7c9;
+    background-color: white;
     border-radius: 8px;
     font-family: "Anton";
-    font-weight: bold;
+    font-weight: 0px;
+    box-shadow: 0 5px 25px 0 rgba(0, 0, 0, .25)
 }
 
 .tripLocation {
@@ -119,10 +194,11 @@ button {
     justify-content: space-around;
     align-items: center;
     border-radius: 8px;
-    background-color: #8b9da3;
+    background-color: white;
     font-size: larger;
     font-family: "Anton";
-    font-weight: bolder;
+    font-weight: 0px;
+    box-shadow: 0 5px 25px 0 rgba(0, 0, 0, .25)
 }
 
 .tripBox {
