--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -1,7 +1,8 @@
 .box {
     height: 300px;
-    background-color: aquamarine;
+    background-color: white;
     color: black;
+    box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .45);
     font-size: x-large;
     width: 300px;
     margin: 100px;
