--- a/src/Components/MyProfile.css
+++ b/src/Components/MyProfile.css
@@ -11,6 +11,17 @@
     margin-right: 90px;
 }
 
+.profileHeader {
+    background-color: none;
+    height: 70px;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    border-bottom: 1px solid white;
+}
+
 .rightProfileContainer {
     height: 100vh;
     width: 70vw;
